--- a/U13/about.html
+++ b/U13/about.html
@@ -35,7 +35,7 @@
 <a href="index.html">: About Us </a> : <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
 &nbsp;<!-- #EndEditable --><p class="auto-style4">&nbsp;</p>
@@ -44,13 +44,11 @@ help you find a choice in your interest for mobile devices, this website will
 contain information upon the product in a way that you would hopefully find 
 easier to understand than most websites. This website will be easy to guide 
 through as it will be simple and if you need guidance click here:
-<a href="file://G-DATA-2012/G_Students/22115360/Documents/IT%20level%202/Mobileworldstation/help.html">
-Help</a>, or you can press Help in the right hand side of the navigation bar 
+<a href="file://G-DATA-2012/G_Students/22115360/Documents/IT%20level%202/Mobileworldstation/help.html" target="_blank">Help</a>, or you can press Help in the right hand side of the navigation bar 
 that is below the banner above.</p>
 <p class="auto-style4">&nbsp;</p>
 <p class="auto-style4">If you have further inquiries please refer to:
-<a href="file://G-DATA-2012/G_Students/22115360/Documents/IT%20level%202/Mobileworldstation/contact.html">
-contact</a></p>
+<a href="file://G-DATA-2012/G_Students/22115360/Documents/IT%20level%202/Mobileworldstation/contact.html" target="_blank">contact</a></p>
 <p class="auto-style4">&nbsp;</p>
 <p class="auto-style3">We are a company, our sole focus is to ensure customers </p>
 <p class="auto-style3">receive real information and without sugarcoating devices </p>
