--- a/U13/index.html
+++ b/U13/index.html
@@ -50,10 +50,24 @@
 </a>: <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
-&nbsp;<!-- #EndEditable --><p class="auto-style3">&nbsp;</p>
+&nbsp;<!-- #EndEditable --><p class="auto-style2"><script>
+//Time of day message script- by javascriptkit.com
+//Visit JavaScript Kit (http://javascriptkit.com) for script
+//Modified by Rhys Mahoney
+//Credit must stay intact for use
+var Digital=new Date()
+var hours=Digital.getHours()
+//Configure message below to your own.
+if (hours>=0&&hours<=12) //MESSAGE FOR MORNING (00:00-11:59)
+document.write('<b>Good Morning, welcome to MWS website.</b>')
+else if (hours>12&&hours<=17) //MESSAGE FOR AFTERNOON (12:01-17:00)
+document.write('<b>Good Afternoon, welcome to MWS website.</b>')
+else //MESSAGE FOR THE REST OF THE DAY (17:00-23:59)
+document.write('<b>Good Evening, welcome to MWS website.</b>')
+</script></p>
 <p class="auto-style3">
 <img alt="" class="auto-style4" height="400" src="images/iphone14hp.jpg" width="742" /></p>
 					<div class="iphone-14 device">
@@ -61,7 +75,7 @@
 							<h3>
 								<span class="violator-frameless violator-frameless-reduced">New</span> <span class="visuallyhidden">iPhone 14</span>
 								<p>
-								&nbsp;<a href="https://www.apple.com/iphone/"> 
+								&nbsp;<a href="https://www.apple.com/iphone/" target="_blank"> 
 								For more details press any text on in this line.</a></p>
 							<p>
 								Features:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
@@ -132,13 +146,24 @@ so well versed with technology.</p>
 						<p class="auto-style2">Liquid Retina display</p>
 					</div>
 <p class="auto-style3">&nbsp;</p>
+<h1 class="auto-style3"><strong>Accessories:</strong></h1>
+<p class="auto-style3">
+<img alt="" height="638" src="images/phonecase.jpg" width="672" /></p>
 <p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
-<p class="auto-style3">&nbsp;</p>
+<p class="auto-style3">This Phone case is £18.99</p>
+<p class="auto-style3">To buy this phone case you need to spend money.</p>
+<p class="auto-style3">to get the phone case you must visit this website: </p>
+<p class="auto-style3">
+<a href="https://rocksteadycases.co.uk/products/personalised-blue-marble-phone-case-1" target="_blank">
+Click Here</a></p>
+<p class="auto-style3">
+<img alt="" height="650" src="images/phonecase2.jpg" width="650" /></p>
+<p class="auto-style3">This phone case is £20.70</p>
+<p class="auto-style3">to buy this phone you must spend money</p>
+<p class="auto-style3">to get the phone case you must visit this website: </p>
+<p class="auto-style3">
+<a href="to%20get%20the%20phone%20case%20you%20must%20visit%20this%20website:" target="_blank">
+Click Here</a></p>
 <p class="auto-style3">&nbsp;</p>
 <p class="auto-style3">&nbsp;</p>
 <p class="auto-style3">&nbsp;</p>
