--- a/U13/phones.html
+++ b/U13/phones.html
@@ -45,7 +45,7 @@
 <a href="index.html">: About Us </a> : <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
 &nbsp;<!-- #EndEditable --><p style="text-align: center">
@@ -58,7 +58,7 @@ the website to find more info.</strong><p class="auto-style6">
 							<h3 class="auto-style6">
 								<span class="violator-frameless violator-frameless-reduced">New</span> <span class="visuallyhidden">iPhone 14</span>
 								<p class="auto-style6">
-								&nbsp;<a href="https://www.apple.com/iphone/"> 
+								&nbsp;<a href="https://www.apple.com/iphone/" target="_blank"> 
 								For more details press any text on in this line.</a></p>
 							<p class="auto-style3">
 								Features:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
