--- a/U13/contact.html
+++ b/U13/contact.html
@@ -32,7 +32,7 @@
 <a href="index.html">: About Us </a> : <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
 &nbsp;<!-- #EndEditable --><p style="text-align: right">&nbsp;</p>
@@ -52,7 +52,19 @@ mwsbusinessstation@cambria.ac.uk</p>
 <p>Phone Number:</p>
 <p>0782928392</p>
 <p class="auto-style3">&nbsp;</p>
+<p class="auto-style3">&nbsp;</p>
 
+
+<p>You can also use the form below to send us your enquiry.</p>
+<form method="post" action="mailto:22115360@cambria.ac.uk">
+	<p>Name<br />
+	<input name="Name" tabindex="1" type="text" /></p>
+	<p>Email Address<br />
+	<input name="Address" tabindex="2" type="text" /></p>
+	<p>Your Message<br />
+	<textarea cols="30" name="Message" rows="7" tabindex="3"></textarea></p>
+	<input name="Submit1" type="submit" value="Submit" />
+</form>
 </body>
 
 </html>
