--- a/U13/services.html
+++ b/U13/services.html
@@ -42,26 +42,58 @@
 <a href="index.html">: About Us </a> : <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
 &nbsp;<!-- #EndEditable --><p class="auto-style4">&nbsp;</p>
 <p class="auto-style4">&nbsp;Reddit Review:</p>
 <p class="auto-style4">
-<a href="https://www.reddit.com/user/Specialist-Sleep6958/comments/13jvxyl/review_for_mobile_world_station_website/">
+<a href="https://www.reddit.com/user/Specialist-Sleep6958/comments/13jvxyl/review_for_mobile_world_station_website/" target="_blank">
 <img class="auto-style5" height="89" src="images/reviewimage.jpeg" width="213" /></a></p>
 <p class="auto-style7">&nbsp;</p>
 <p class="auto-style3">&nbsp; If you need help with technical support contact:</p>
 <p class="auto-style6">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="mailto:mwstechstation@cambria.ac.uk">mwstechstation@cambria.ac.uk</a></p>
 <p class="auto-style5">&nbsp;</p>
-<p class="auto-style4">&nbsp;</p>
-<p class="auto-style4">If you are looking for a refund, please refer back to the 
-sites and get into contact with their support teams. We would be glad to help 
-guide you through the refund section if necessary. </p>
-<p class="auto-style3">&nbsp;</p>
+<table style="width: 100%">
+	<tr>
+		<td style="width: 425px">Insurance:</td>
+		<td>We offer insurance so you can return your devices you have bought 
+		and we will repair or replace your devices.</td>
+	</tr>
+	<tr>
+		<td style="width: 425px">Contracts:</td>
+		<td>We offer full contracts, 6 months of warranty for all items that are 
+		being displayed on this website. Pay an extra £20 for 6 more months of 
+		warranty for a total of 12 months.</td>
+	</tr>
+	<tr>
+		<td style="width: 425px">&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+</table>
+<table style="width: 100%">
+	<tr>
+		<td style="width: 425px">O2 Forum</td>
+		<td><a href="https://community.o2.co.uk/" target="_blank">Click here for 
+		the Community Forum</a></td>
+	</tr>
+	<tr>
+		<td style="width: 425px">Apple Forum</td>
+		<td><a href="https://discussions.apple.com/welcome" target="_blank">
+		Click here for Apple Forum</a></td>
+	</tr>
+</table>
 <p style="text-align: right">&nbsp;</p>
-<p style="text-align: right">&nbsp;</p>
+<p>Fill in the form to receive a contract..</p>
+<form method="post" action="mailto:22090418@cambria.ac.uk">
+<label id="Label1">Name</label> : <input name="Text1" type="text" /> <br />
+<label id="Label1">Email</label> : <input name="Text1" type="text" /> <br />
+	<br />
+<label id="Label1">Comments</label> <br />
+<textarea name="TextArea1" cols="20" rows="2"></textarea> <br />
+<input name="Submit1" type="submit" value="Submit" />
+</form></p>
 
 </body>
 
