--- a/U13/tablets.html
+++ b/U13/tablets.html
@@ -40,7 +40,7 @@
 <a href="index.html">: About Us </a> : <a href="services.html">Services</a>&nbsp; 
 : <a href="contact.html">Contact Us</a> : <a href="tablets.html">Tablets</a> :
 <a href="phones.html"> Phones </a> : <a href="newreleases.html"> New Releases </a> 
-</span></b>:<span class="auto-style1"><a href="Help.html">Help </a>
+</span></b>:<span class="auto-style1"><a href="help.html">Help </a>
 </span>
 <!-- #BeginEditable "body" -->
 &nbsp;<!-- #EndEditable --><p style="text-align: right">
